objects/FieloPRM_InvoiceDetail__c.object
<CustomObject>
    <fields>
        <fullName>Distributor_Retailer_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Retailer SKU</label>
        <referenceTo>DistributorRetailerSKU__c</referenceTo>
        <relationshipLabel>PRM Invoice Details</relationshipLabel>
        <relationshipName>PRM_Invoice_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_Invoice__c</fullName>
        <label>PRM Invoice</label>
        <referenceTo>FieloPRM_Invoice__c</referenceTo>
        <relationshipLabel>PRM Invoice Details</relationshipLabel>
        <relationshipName>PRM_Invoice_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>F_PRM_LoyaltyEligibleProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRM Loyalty Eligible Product</label>
        <referenceTo>FieloPRM_LoyaltyEligibleProduct__c</referenceTo>
        <relationshipLabel>PRM Invoice Details</relationshipLabel>
        <relationshipName>PRM_Invoice_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_PointValueReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point Value Reference</label>
        <referenceTo>FieloPRM_ProductPointValue__c</referenceTo>
        <relationshipLabel>PRM Invoice Details</relationshipLabel>
        <relationshipName>PRM_Invoice_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_PointsInstaller__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_ProductPtsInstaller__c</fullName>
        <formula>F_PRM_UnitPointValue__c  *  F_PRM_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Points Installer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_SkipEngine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_TotalPrice__c</fullName>
        <formula>F_PRM_UnitPrice__c  *  F_PRM_Volume__c</formula>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_PRM_UnitPointValue__c</fullName>
        <label>Unit Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_PRM_Volume__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PRM Invoice Detail</label>
    <nameField>
        <displayFormat>InvDet-{0}</displayFormat>
        <label>PRM Invoice Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRM Invoice Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloPRM_VR_InvoiceAndProductCountry</fullName>
        <active>true</active>
        <description>Product Country and Invoice Country must be the same</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
( NOT( F_PRM_LoyaltyEligibleProduct__r.F_Country__r.CountryCode__c  =  F_PRM_Invoice__r.F_CountryCode__c ) )</errorConditionFormula>
        <errorDisplayField>F_PRM_LoyaltyEligibleProduct__c</errorDisplayField>
        <errorMessage>The selected product does not belong to the country specified in the invoice. Please select a different product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INV_VR_APR19PRM01_QtyPriceMandatory</fullName>
        <active>false</active>
        <description>Price and Qty is mandatory</description>
        <errorConditionFormula>AND(ISPICKVAL(F_PRM_Invoice__r.F_PRM_Status__c,&apos;Approved&apos;),
	OR(F_PRM_UnitPrice__c =0,
	   ISBLANK(F_PRM_UnitPrice__c),
	   F_PRM_Volume__c = 0,
	   ISBLANK(F_PRM_Volume__c)
	)
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Quantity and Price are mandatory</errorMessage>
    </validationRules>
</CustomObject>